--- a/studtest/templates/login/login.html
+++ b/studtest/templates/login/login.html
@@ -5,7 +5,7 @@
 {% block content %}
 
     <h1>Главная страница</h1>
-    <form action="testing/" method="post">
+    <form action="" method="post">
         {% csrf_token %}
         <label for="username">Имя пользователя</label>
         <input type="text" name="username" id="username" placeholder="Фамилия">
