before recreate models

--- a/studtest/templates/login/login.html
+++ b/studtest/templates/login/login.html
@@ -13,5 +13,5 @@
         <input type="password" name="password" id="password" placeholder="Пароль">
         <INPUT TYPE="submit" value="войти">
     </form>
-
+    <a href="{% url 'maintestpage' %}">перейти на страницу тестов</a>
 {% endblock %}
