--- a/studtest/templates/test/test.html
+++ b/studtest/templates/test/test.html
@@ -3,5 +3,56 @@
 
 {% block title %}тест "номер теста"{% endblock %}
 {% block content %}
-    <h2>страница теста</h2>
+
+<div class="container">
+    <div class="row center-block">
+        <div class="col text-center">
+            <div class="jumbotron jumbotron-fluid">
+                <h1 class="display-4">{{ test.test_name }}</h1>
+                <p class="lead">{{ test.test_desc }}</p>
+                <hr>
+                <form action="" method="get">
+                    <input type="submit" class="btn btn-info" value="начать тестирование" name="start_test">
+                </form>
+            </div>
+        </div>
+    </div>
+    {% if start_test %}
+     <form action="" method="post">
+        {% csrf_token %}
+    <div class="row">
+        <div class="col">
+                {% for question in test.requests.all %}
+                    <br>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col bg-secondary">
+                                 <h3 class="text-white">{{ question.question_name }}</h3>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                 <ul class="list-group nav nav-tabs nav-stacked">
+                                    {% for answer in question.answer_set.all %}
+                                        <div class="custom-control custom-checkbox bg-light">
+                                            <input name="{{ question.id }}" type="checkbox" value="{{ answer.id }}" class="custom-control-input" id="{{ answer.id }}">
+                                            <label class="custom-control-label text-info" for="{{ answer.id }}"><h5>{{ answer.answer_name }}</h5></label>
+                                        </div>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                {% endfor %}
+        </div>
+    </div>
+         <input type="submit" class="btn btn-info" value="отправить результат" name="test_result">
+    </form>
+    {% endif %}
+    {% if created_result %}
+        <a href="{% url 'resultspage' created_result %}">узнать результат</a>
+    {% endif %}
+</div>
+
 {% endblock %}
